project_2/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-2
  labels:
    app: project-2
