project_2/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: project-2
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  clusterIP: None
  selector:
    app: postgres
